# hw-simd-cli

./: .ghc.environment.x86_64-darwin-8.6.5  ChangeLog.md  README.md  head  hw-simd-cli.cabal  package.yaml  project.sh  stack.yaml
.circleci/: config.yml
app/App/: Char.hs  Commands.hs  IO.hs
app/App/Commands/: Cat.hs  Chunks.hs  CmpEq8s.hs  Cut.hs  Wc.hs
app/App/Commands/Options/: Type.hs
src/HaskellWorks/Simd/Cli/: ChunkData.hs  Comparison.hs  CutCursor.hs
