name:           hw-simd-cli
version:        0.0.0.0
synopsis:       SIMD library
description:    Please see the README on Github at <https://github.com/haskell-works/hw-simd-cli#readme>
category:       Data, Bit, SIMD
homepage:       https://github.com/haskell-works/hw-simd-cli#readme
bug-reports:    https://github.com/haskell-works/hw-simd-cli/issues
author:         John Ky
maintainer:     newhoggy@gmail.com
copyright:      2018 John Ky
license:        BSD3
license-file:   LICENSE
tested-with:    GHC == 8.4.3, GHC == 8.2.2, GHC == 8.0.2, GHC == 7.10.3
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-simd-cli

flag avx2
  description: Enable avx2 instruction set
  manual: False
  default: False

flag bmi2
  description: Enable bmi2 instruction set
  manual: False
  default: False

flag sse42
  description: Enable SSE 4.2 optimisations.
  manual: False
  default: True

library
  exposed-modules:
      HaskellWorks.Simd.Cli.ChunkData
      HaskellWorks.Simd.Cli.Comparison
      HaskellWorks.Simd.Cli.CutCursor
  other-modules:
      Paths_hw_simd_cli
  hs-source-dirs:
      src
  ghc-options: -O2 -Wall
  build-depends:
      base >=4.7 && <5
    , bits-extra >=0.0.1.2 && <0.1
    , bytestring >=0.10 && <0.11
    , containers
    , deepseq >=1.4 && <1.5
    , directory >=1.3.1.5 && <1.4
    , generic-lens
    , hw-bits >=0.7.0.2 && <0.8
    , hw-prim >=0.6.2.8 && <0.7
    , hw-rankselect-base >=0.3.2 && <0.4
    , hw-simd >=0.1.0.0 && <0.2
    , lens
    , mmap >=0.5.9 && <0.6
    , mtl
    , optparse-applicative
    , resourcet
    , vector >=0.12.0.1 && <0.13
  if flag(sse42)
    ghc-options: -msse4.2
  if (flag(bmi2)) && (impl(ghc >=8.4.1))
    ghc-options: -mbmi2 -msse4.2
  if (flag(avx2)) && (impl(ghc >=8.4.1))
    ghc-options: -mbmi2 -msse4.2
  if (impl(ghc >=8.0.1))
    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  if (!impl(ghc >=8.0.1))
    build-depends:
        semigroups >=0.8.4 && <0.19
      , transformers >=0.4 && <0.6
  default-language: Haskell2010

executable hw-simd
  main-is: Main.hs
  other-modules:
      App.Char
      App.Commands
      App.Commands.Cat
      App.Commands.Chunks
      App.Commands.CmpEq8s
      App.Commands.Cut
      App.Commands.Options.Type
      App.Commands.Wc
      App.IO
      Paths_hw_simd_cli
  hs-source-dirs:
      app
  ghc-options: -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bits-extra >=0.0.1.2 && <0.1
    , bytestring >=0.10 && <0.11
    , containers
    , deepseq >=1.4 && <1.5
    , directory >=1.3.1.5 && <1.4
    , generic-lens
    , hw-bits >=0.7.0.2 && <0.8
    , hw-prim >=0.6.2.8 && <0.7
    , hw-rankselect-base >=0.3.2 && <0.4
    , hw-simd >=0.1.0.0 && <0.2
    , hw-simd-cli
    , lens
    , mmap >=0.5.9 && <0.6
    , mtl
    , optparse-applicative
    , resourcet
    , vector >=0.12.0.1 && <0.13
  if flag(sse42)
    ghc-options: -msse4.2
  if (flag(bmi2)) && (impl(ghc >=8.4.1))
    ghc-options: -mbmi2 -msse4.2
  if (flag(avx2)) && (impl(ghc >=8.4.1))
    ghc-options: -mbmi2 -msse4.2
  if (impl(ghc >=8.0.1))
    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  if (!impl(ghc >=8.0.1))
    build-depends:
        semigroups >=0.8.4 && <0.19
      , transformers >=0.4 && <0.6
  default-language: Haskell2010
